welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
		for (i <- 0 to x-1) {
                       ^